--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Delani Studio</title>
 </head>
+
 <body>
+    <div class="container">
+        <div class="home-wrap">
+            <div class="home">
+                <img src="Assets/Backgrounds/h_img.jpg" alt="home-background">
+            </div>
 
 </body>
+
 </html>
