logo image inserted

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <div class="home">
                 <img src="Assets/Backgrounds/h_img.jpg" alt="home-background">
             </div>
+            <div class="logo">
+                <img src="Assets/Logo/logo.png" alt="logo-icon">
+            </div>
 
 </body>
 
