--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             <div class="logo">
                 <img src="Assets/Logo/logo.png" alt="logo-icon">
             </div>
+            <div class="h-and-p">
+                <h1>WELCOME</h1>
+                <br>
+                <h1>TO DELANI STUDIO</h1>
+                <br>
+                <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+            </div>
 
 </body>
 
