mouse icon inserted + container closed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <br>
                 <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
             </div>
+            <div class="mouse-icon">
+                <img src="Assets/Mouse Click Icon/mouse_click.png" alt="mouse-click-icon">
+            </div>
+        </div>
+    </div>
 
 </body>
 
