--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
         </div>
     </div>
 
+    <div class="container2">
+        <div class="about-wrap">
+            <div class="about-header">
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
