--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
     <div class="container2">
         <div class="about-wrap">
             <div class="about-header">
+                <h2>ABOUT US</h2>
+                <br>
+                <h4>When you work with us, you are part of a team of commited collaborators. All aspects of our software
+                    development process are intergrated , interactive and agile.</h4>
+                <br>
+                <h4>Our approach unifies design, development and product managent to create exceptional products.</h4>
+                <br>
+                <h4>We start each project by understanding your business goals, the users needs and the product
+                    requirements.</h4>
+                <br>
+                <h4>Then we help translate them into active and elegant solutions.</h4>
+            </div>
 
 
 
