--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                 <br>
                 <h4>Then we help translate them into active and elegant solutions.</h4>
             </div>
+        </div>
+    </div>
 
 
 
