h1 and p positioning/styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="logo">
                 <img src="Assets/Logo/logo.png" alt="logo-icon">
             </div>
-            <div class="h-and-p">
+            <div class="h1-and-p">
                 <h1>WELCOME</h1>
                 <br>
                 <h1>TO DELANI STUDIO</h1>
