Services bg set

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
     <div class="container3">
         <div class="services-wrap">
             <div class="Services-section">
-            
+                <img src="Assets/Backgrounds/s_image.jpg" alt="services-background">
+            </div>
+            <div class="services-text">
+                <h3>SERVICES</h3>
+                <br>
+                
+            </div>          
         </div>
     </div>
 
