--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
             <div class="services-text">
                 <h3>SERVICES</h3>
                 <br>
-                
+                <h5>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</h5>
+                <br>
+                <h5>The outcome of the scoping session a proposal or high-level statement of work.</h5>
+                <br>
+                <h5>based on your requirements, we can provide a complete offering or just the piece you need.</h5>
+                                             
             </div>          
         </div>
     </div>
