--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="services-text">
                 <h3>SERVICES</h3>
                 <br>
-                <h5>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</h5>
+                <h5>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vision.</h5>
                 <br>
                 <h5>The outcome of the scoping session a proposal or high-level statement of work.</h5>
                 <br>
@@ -65,7 +65,21 @@
             </div>          
         </div>
     </div>
-    
+
+    <div class="container4">
+        <div class="WWD-header">
+            <div class="WWD-text">
+                <h3>WHAT WE DO</h3>
+            </div>
+            <div class="design-icon">
+                <img src="Assets/Services Icons/design_icon.png" alt="pen-icon">
+                <img src="Assets/Services Icons/dev_icon.png" alt="http-icon">
+                <img src="Assets/Services Icons/product_icon.png" alt="pm-icon">
+            </div>
+        </div>
+    </div>
+
+
 
 
 
