--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
             <div class="services-text">
                 <h3>SERVICES</h3>
                 <br>
-                <h5>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vision.</h5>
+                <h5>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to
+                    understand your product vision.</h5>
                 <br>
                 <h5>The outcome of the scoping session a proposal or high-level statement of work.</h5>
                 <br>
-                <h5>based on your requirements, we can provide a complete offering or just the piece you need.</h5>                             
-            </div>          
+                <h5>based on your requirements, we can provide a complete offering or just the piece you need.</h5>
+            </div>
         </div>
     </div>
 
@@ -71,10 +72,16 @@
             <div class="WWD-text">
                 <h3>WHAT WE DO</h3>
             </div>
-            <div class="design-icon">
-                <img src="Assets/Services Icons/design_icon.png" alt="pen-icon">
-                <img src="Assets/Services Icons/dev_icon.png" alt="http-icon">
-                <img src="Assets/Services Icons/product_icon.png" alt="pm-icon">
+            <div class="WWD-icons">
+                <div class="dsn-icon">
+                    <img src="Assets/Services Icons/design_icon.png" alt="pen-icon">
+                </div>
+                <div class="dv-icon">
+                    <img src="Assets/Services Icons/dev_icon.png" alt="http-icon">
+                </div>
+                <div class="prdct-icon">
+                    <img src="Assets/Services Icons/product_icon.png" alt="pm-icon">
+                </div>
             </div>
         </div>
     </div>
