WWD icons positioned

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <div class="prdct-icon">
                     <img src="Assets/Services Icons/product_icon.png" alt="pm-icon">
                 </div>
+                <div></div>
             </div>
         </div>
     </div>
