Icon titles styling

--- a/index.html
+++ b/index.html
@@ -82,7 +82,18 @@
                 <div class="prdct-icon">
                     <img src="Assets/Services Icons/product_icon.png" alt="pm-icon">
                 </div>
-                <div></div>
+            </div>
+            <br>
+            <div class="WWD-icon-titles">
+                <div class="dsn-title">
+                    <h6>DESIGN</h6>
+                </div>
+                <div class="dv-title">
+                    <h6>DEVELOPMENT</h6>
+                </div>
+                <div class="prdct-title">
+                    <h6>PRODUCT MANAGEMENT</h6>
+                </div>
             </div>
         </div>
     </div>
