--- a/index.html
+++ b/index.html
@@ -93,9 +93,17 @@
                 </div>
                 <div class="prdct-title">
                     <h6>PRODUCT MANAGEMENT</h6>
-                </div>
+                </div>              
+            </div>          
+        </div>
+    </div>
+    <div class="container5">
+        <div class="portfolio-header-wrap">
+            <div class="portfolio-h3">
+                <h3>PORTFOLIO</h3>
             </div>
         </div>
+
     </div>
 
 
