--- a/index.html
+++ b/index.html
@@ -103,6 +103,32 @@
                 <h3>PORTFOLIO</h3>
             </div>
         </div>
+        <div class="portfolio-images">
+            <div class="black-stu">
+                <img src="Assets/Portfolio/work1.jpg" alt="BS">
+            </div>
+            <div class="ontario-sec">
+                <img src="Assets/Portfolio/work2.jpg" alt="OS">
+            </div>
+            <div class="pyramids">
+                <img src="Assets/Portfolio/work3.jpg" alt="P">    
+            </div>
+            <div class="jim-carry">
+                <img src="Assets/Portfolio/work4.jpg" alt="JC">
+            </div>
+            <div class="have-nice-day">
+                <img src="Assets/Portfolio/work5.jpg" alt="HAND">
+            </div>
+            <div class="calculator">
+                <img src="Assets/Portfolio/work6.jpg" alt="C">
+            </div>
+            <div class="burned-logo">
+                <img src="Assets/Portfolio/work7.jpg" alt="B">
+            </div>
+            <div class="Giraffe">
+                <img src="Assets/Portfolio/work8.jpg" alt="GR">
+            </div>
+        </div>
 
     </div>
 
