--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3>PORTFOLIO</h3>
             </div>
         </div>
-        <div class="portfolio-images">
+        <div class="portfolio-images1">
             <div class="black-stu">
                 <img src="Assets/Portfolio/work4.jpg" alt="BS">
             </div>
@@ -116,6 +116,9 @@
             <div class="jim-carry">
                 <img src="Assets/Portfolio/work1.jpg" alt="JC">
             </div>
+            <br>
+        </div>
+        <div class="portfolio-images2">
             <div class="have-nice-day">
                 <img src="Assets/Portfolio/work5.jpg" alt="HAND">
             </div>
