portfolio hover effect

--- a/index.html
+++ b/index.html
@@ -106,32 +106,39 @@
         <div class="porfolio-wrap">
             <div class="portfolio-images">
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work4.jpg" alt="BS">
-                    <div class="content"></div>
+                    <img class="blur" src="Assets/Portfolio/work4.jpg">
+                    <div class="content">Black Studio</div>
                 </div>
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work3.jpg" alt="OS">
+                    <img class="blur" src="Assets/Portfolio/work3.jpg">
+                    <div class="content">Ontario Security</div>
                 </div>
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work2.jpg" alt="P">
+                    <img class="blur" src="Assets/Portfolio/work2.jpg">
+                    <div class="content">Pyramids</div>
                 </div>
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work1.jpg" alt="JC">
+                    <img class="blur" src="Assets/Portfolio/work1.jpg">
+                    <div class="content">Jim Carry</div>
                 </div>
                 
             </div>
             <div class="portfolio-images">
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work5.jpg" alt="HAND">
+                    <img class="blur" src="Assets/Portfolio/work5.jpg">
+                    <div class="content">Have a Nice Day</div>
                 </div>
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work6.jpg" alt="C">
+                    <img class="blur" src="Assets/Portfolio/work6.jpg">
+                    <div class="content">Calculator</div>
                 </div>
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work7.jpg" alt="B">
+                    <img class="blur" src="Assets/Portfolio/work7.jpg">
+                    <div class="content">Burned</div>
                 </div>
                 <div class="img-wrap">
-                    <img src="Assets/Portfolio/work8.jpg" alt="GR">
+                    <img class="blur" src="Assets/Portfolio/work8.jpg">
+                    <div class="content">Giraffe Restaurant</div>
                 </div>
             </div>
         </div>
