--- a/index.html
+++ b/index.html
@@ -107,38 +107,38 @@
             <div class="portfolio-images">
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work4.jpg">
-                    <div class="content">Black Studio</div>
+                    <div class="content fade">Black Studio</div>
                 </div>
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work3.jpg">
-                    <div class="content">Ontario Security</div>
+                    <div class="content fade">Ontario Security</div>
                 </div>
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work2.jpg">
-                    <div class="content">Pyramids</div>
+                    <div class="content fade">Pyramids</div>
                 </div>
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work1.jpg">
-                    <div class="content">Jim Carry</div>
+                    <div class="content fade">Jim Carry</div>
                 </div>
                 
             </div>
             <div class="portfolio-images">
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work5.jpg">
-                    <div class="content">Have a Nice Day</div>
+                    <div class="content fade">Have a Nice Day</div>
                 </div>
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work6.jpg">
-                    <div class="content">Calculator</div>
+                    <div class="content fade">Calculator</div>
                 </div>
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work7.jpg">
-                    <div class="content">Burned</div>
+                    <div class="content fade">Burned</div>
                 </div>
                 <div class="img-wrap">
                     <img class="blur" src="Assets/Portfolio/work8.jpg">
-                    <div class="content">Giraffe Restaurant</div>
+                    <div class="content fade">Giraffe Restaurant</div>
                 </div>
             </div>
         </div>
