--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <img class="blur" src="Assets/Portfolio/work1.jpg">
                     <div class="content fade">Jim Carry</div>
                 </div>
-                
+
             </div>
             <div class="portfolio-images">
                 <div class="img-wrap">
@@ -142,6 +142,49 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="container6">
+        <div class="contact-section">
+            <div class="contact-bg">
+                <img src="Assets/Backgrounds/c_image.jpg" alt="cubg">
+            </div>
+            <div class="contact-us-text">
+                <h3>CONTACT US</h3>
+            </div>
+            <div class="row input-container">
+                <div class="col-xs-12">
+                    <div class="styled-input wide">
+                        <input type="text" required />
+                        <label>Name</label>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="styled-input">
+                        <input type="text" required />
+                        <label>Email</label>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="styled-input" style="float:right;">
+                        <input type="text" required />
+                        <label>Phone Number</label>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="styled-input wide">
+                        <textarea required></textarea>
+                        <label>Message</label>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="btn-lrg submit-btn">Send Message</div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
     </div>
 
 
