--- a/index.html
+++ b/index.html
@@ -153,28 +153,22 @@
                 <h3>CONTACT US</h3>
             </div>
             <div class="row input-container">
-                <div class="col-xs-12">
-                    <div class="styled-input wide">
-                        <input type="text" required />
-                        <label>Name</label>
-                    </div>
-                </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="styled-input">
                         <input type="text" required />
-                        <label>Email</label>
+                        <label>Name...</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="styled-input" style="float:right;">
                         <input type="text" required />
-                        <label>Phone Number</label>
+                        <label>Email...</label>
                     </div>
                 </div>
                 <div class="col-xs-12">
                     <div class="styled-input wide">
                         <textarea required></textarea>
-                        <label>Message</label>
+                        <label>Your message here...</label>
                     </div>
                 </div>
                 <div class="col-xs-12">
