--- a/index.html
+++ b/index.html
@@ -179,10 +179,25 @@
 
 
     </div>
-    </div>
 
 
-
+    <footer>
+        <div class="social-icons">
+            <img src="Assets/Social Icons/twitter.png" alt="twitter">
+            <img src="Assets/Social Icons/dribble.png" alt="dribble">
+            <img src="Assets/Social Icons/facebook.png" alt="facebook">
+            <img src="Assets/Social Icons/g_plus.png" alt="googleplus">
+            <img src="Assets/Social Icons/skype.png" alt="skype">
+            <img src="Assets/Social Icons/stumble_upon.png" alt="stumble">
+            <img src="Assets/Social Icons/behance.png" alt="behance">
+            <img src="Assets/Social Icons/pinterest.png" alt="pinterest">
+            <img src="Assets/Social Icons/flickr.png" alt="flickr">
+        </div>
+        <div class="footer-text">
+            <div class="txt">
+                DELANI STUDIO
+            </div>
+    </footer>
 
 
 
