page styling completion

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
             <div class="txt">
                 DELANI STUDIO
             </div>
+            <div class="year-txt">
+                2019
+            </div>
     </footer>
 
 
