mouse bounce set

--- a/index.html
+++ b/index.html
@@ -152,32 +152,22 @@
             <div class="contact-us-text">
                 <h3>CONTACT US</h3>
             </div>
-            <div class="row input-container">
-                <div class="col-md-6 col-sm-12">
-                    <div class="styled-input">
-                        <input type="text" required />
-                        <label>Name...</label>
-                    </div>
+            <form id="form34A" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
+                <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
+                <input type="hidden" name="id" value="dbf7e27685">
+                <div class="form-group form-inline">
+                    <input type="text" class="form-control" placeholder="Name...." name="MERGE1" id="MERGE1" size="25"
+                        value="">
+                    <input type="email" class="form-control" placeholder="Email...." autocapitalize="off"
+                        autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
                 </div>
-                <div class="col-md-6 col-sm-12">
-                    <div class="styled-input" style="float:right;">
-                        <input type="text" required />
-                        <label>Email...</label>
-                    </div>
+                <div class="form-group">
+                    <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
                 </div>
-                <div class="col-xs-12">
-                    <div class="styled-input wide">
-                        <textarea required></textarea>
-                        <label>Your message here...</label>
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <div class="btn-lrg submit-btn">Send Message</div>
-                </div>
-            </div>
+                <button type="submit" class="btn btn-primary col-md-1">Submit</button>
+            </form>
+
         </div>
-
-
     </div>
 
 
@@ -202,14 +192,7 @@
             </div>
     </footer>
 
-
-
-
-
-
-
-
-
+    <script src="index.js"></script>
 </body>
 
 </html>
