WWD section mofification

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                 <div class="dsn-title">
                     <h6>DESIGN</h6>
                 </div>
+                <div class="dsn-image">
+                  
+                </div>
                 <div class="dv-title">
                     <h6>DEVELOPMENT</h6>
                 </div>
